修改热点界面视频播放地址

--- a/kankan/kankan/Class/Home/View/FooterReusableView.xib
+++ b/kankan/kankan/Class/Home/View/FooterReusableView.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="footer" id="U6b-Vx-4bR" customClass="FooterReusableView" customModule="响巢看看" customModuleProvider="target">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="footer" id="U6b-Vx-4bR" customClass="FooterReusableView" customModule="kankan" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="10"/>
             <autoresizingMask key="autoresizingMask"/>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
