--- a/kankan/kankan/Class/Mine/View/OtherReusableView.xib
+++ b/kankan/kankan/Class/Mine/View/OtherReusableView.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="other" id="U6b-Vx-4bR" customClass="OtherReusableView" customModule="响巢看看" customModuleProvider="target">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="other" id="U6b-Vx-4bR" customClass="OtherReusableView" customModule="kankan" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="397" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
