--- a/kankan/kankan/Class/Mine/View/LoginView.xib
+++ b/kankan/kankan/Class/Mine/View/LoginView.xib
@@ -47,19 +47,6 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ajv-AB-Qw2">
-                    <rect key="frame" x="137" y="273" width="100" height="20"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="100" id="Q7z-hk-SpX"/>
-                        <constraint firstAttribute="height" constant="20" id="v8T-dC-wz4"/>
-                    </constraints>
-                    <state key="normal" title="忘记密码？">
-                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="loginAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="Uee-BB-sSf"/>
-                    </connections>
-                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -70,9 +57,7 @@
                 <constraint firstItem="ee2-8U-wiE" firstAttribute="height" secondItem="MDH-ji-UuY" secondAttribute="height" id="GAs-Fj-Tk4"/>
                 <constraint firstAttribute="trailing" secondItem="oUo-vG-fAI" secondAttribute="trailing" constant="20" id="HlF-IK-zl4"/>
                 <constraint firstAttribute="trailing" secondItem="MDH-ji-UuY" secondAttribute="trailing" constant="30" id="Ief-le-PLC"/>
-                <constraint firstItem="Ajv-AB-Qw2" firstAttribute="top" secondItem="oUo-vG-fAI" secondAttribute="bottom" constant="20" id="J1s-nC-ESI"/>
                 <constraint firstItem="xUi-mV-N38" firstAttribute="leading" secondItem="v4G-XK-rk1" secondAttribute="leading" id="ME5-aJ-LWB"/>
-                <constraint firstItem="Ajv-AB-Qw2" firstAttribute="centerX" secondItem="oUo-vG-fAI" secondAttribute="centerX" id="P2e-jV-5fQ"/>
                 <constraint firstItem="xUi-mV-N38" firstAttribute="top" secondItem="v4G-XK-rk1" secondAttribute="bottom" constant="20" id="Rz6-br-3pm"/>
                 <constraint firstItem="oUo-vG-fAI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="U7a-Px-TNL"/>
                 <constraint firstItem="xUi-mV-N38" firstAttribute="width" secondItem="v4G-XK-rk1" secondAttribute="width" id="Vfh-yG-p1h"/>
@@ -93,7 +78,12 @@
                     <exclude reference="kTR-Kt-5QX"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="307.5" y="311.5"/>
+            <connections>
+                <outlet property="LoginBtn" destination="oUo-vG-fAI" id="sYz-di-dIP"/>
+                <outlet property="passwordField" destination="ee2-8U-wiE" id="AtR-ZD-CQG"/>
+                <outlet property="userNameField" destination="MDH-ji-UuY" id="hzz-Ch-QkV"/>
+            </connections>
+            <point key="canvasLocation" x="405.5" y="300.5"/>
         </view>
     </objects>
     <resources>
