--- a/kankan/kankan/Class/Mine/View/MineTableViewCell.xib
+++ b/kankan/kankan/Class/Mine/View/MineTableViewCell.xib
@@ -8,10 +8,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="firstMine" rowHeight="84" id="KGk-i7-Jjw" customClass="MineTableViewCell" customModule="kankan" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="230" height="84"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="230" height="83"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="112" placeholderIntrinsicHeight="108" translatesAutoresizingMaskIntoConstraints="NO" id="Rks-Qe-SUv">
@@ -22,7 +22,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gra-eb-Hjy">
-                        <rect key="frame" x="80" y="20" width="140" height="20"/>
+                        <rect key="frame" x="80" y="20" width="285" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Cke-HT-0NK"/>
                         </constraints>
@@ -31,15 +31,27 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MN1-cp-lwW">
-                        <rect key="frame" x="80" y="40" width="140" height="20"/>
+                        <rect key="frame" x="80" y="40" width="285" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYw-ZN-WRN">
+                        <rect key="frame" x="285" y="30" width="80" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="lCl-35-JIg"/>
+                            <constraint firstAttribute="height" constant="20" id="ud0-1B-fBb"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="gra-eb-Hjy" firstAttribute="leading" secondItem="Rks-Qe-SUv" secondAttribute="trailing" constant="10" id="AnE-8E-jPP"/>
+                    <constraint firstAttribute="trailing" secondItem="DYw-ZN-WRN" secondAttribute="trailing" constant="10" id="Cro-xi-Hdr"/>
                     <constraint firstItem="Rks-Qe-SUv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="RI8-nZ-kD4"/>
+                    <constraint firstItem="DYw-ZN-WRN" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Tdk-jr-BsP"/>
                     <constraint firstAttribute="trailing" secondItem="gra-eb-Hjy" secondAttribute="trailing" constant="10" id="Vno-Il-zbT"/>
                     <constraint firstItem="MN1-cp-lwW" firstAttribute="leading" secondItem="gra-eb-Hjy" secondAttribute="leading" id="XSI-Op-tVx"/>
                     <constraint firstItem="MN1-cp-lwW" firstAttribute="top" secondItem="gra-eb-Hjy" secondAttribute="bottom" id="YDH-qR-HhM"/>
@@ -51,10 +63,11 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="descLabel" destination="MN1-cp-lwW" id="zBy-Vx-Bzy"/>
+                <outlet property="modifyLabel" destination="DYw-ZN-WRN" id="puK-YM-mxt"/>
                 <outlet property="titleLabel" destination="gra-eb-Hjy" id="hX3-l6-LSC"/>
                 <outlet property="userImage" destination="Rks-Qe-SUv" id="3qp-cZ-75b"/>
             </connections>
-            <point key="canvasLocation" x="246" y="205"/>
+            <point key="canvasLocation" x="316.5" y="205"/>
         </tableViewCell>
     </objects>
 </document>
